--- a/Mvc_Online_Commercial_Automation/Mvc_Online_Commercial_Automation.csproj
+++ b/Mvc_Online_Commercial_Automation/Mvc_Online_Commercial_Automation.csproj
@@ -143,10 +143,13 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\GalleryController.cs" />
+    <Compile Include="Controllers\GraphicController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\ProductDetailsController.cs" />
     <Compile Include="Controllers\QRController.cs" />
@@ -166,7 +169,11 @@
     <Compile Include="Models\Classes\CargoTracking.cs" />
     <Compile Include="Models\Classes\Cari.cs" />
     <Compile Include="Models\Classes\Category.cs" />
+    <Compile Include="Models\Classes\ChartClass1.cs" />
+    <Compile Include="Models\Classes\ChartClass2.cs" />
     <Compile Include="Models\Classes\Class1.cs" />
+    <Compile Include="Models\Classes\Class2.cs" />
+    <Compile Include="Models\Classes\Class3.cs" />
     <Compile Include="Models\Classes\Context.cs" />
     <Compile Include="Models\Classes\Department.cs" />
     <Compile Include="Models\Classes\Details.cs" />
@@ -177,10 +184,12 @@
     <Compile Include="Models\Classes\GroupClass3.cs" />
     <Compile Include="Models\Classes\Invoice.cs" />
     <Compile Include="Models\Classes\InvoiceItem.cs" />
+    <Compile Include="Models\Classes\Message.cs" />
     <Compile Include="Models\Classes\Product.cs" />
     <Compile Include="Models\Classes\SalesTransaction.cs" />
     <Compile Include="Models\Classes\Todo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rols\AdminRoleProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AdminLTE-3.0.4\.gitignore" />
@@ -2946,9 +2955,28 @@
     <Content Include="Views\Cargo\CargoAdd.cshtml" />
     <Content Include="Views\Cargo\CargoDetails.cshtml" />
     <Content Include="Views\QR\Index.cshtml" />
+    <Content Include="Views\Graphic\Index.cshtml" />
+    <Content Include="Views\Graphic\graphic2.cshtml" />
+    <Content Include="Views\Graphic\graphic3.cshtml" />
+    <Content Include="Views\Graphic\Graphic4.cshtml" />
+    <Content Include="Views\Graphic\Graphic5.cshtml" />
+    <Content Include="Views\Graphic\Graphic6.cshtml" />
+    <Content Include="Views\Graphic\Graphic7.cshtml" />
+    <Content Include="Views\CariPanel\SendMessage.cshtml" />
+    <Content Include="Views\CariPanel\OutCommingMessage.cshtml" />
+    <Content Include="Views\CariPanel\MessageDetails.cshtml" />
+    <Content Include="Views\CariPanel\NewMessage.cshtml" />
+    <Content Include="Views\CariPanel\KargoTracking.cshtml" />
+    <Content Include="Views\CariPanel\CargoTakip.cshtml" />
+    <Content Include="Views\CariPanel\PartialInfo.cshtml" />
+    <Content Include="Views\CariPanel\PartialAnnouncement.cshtml" />
+    <Content Include="Views\Error\PageError.cshtml" />
+    <Content Include="Views\Category\Deneme.cshtml" />
+    <Content Include="Views\Invoice\Dynamic.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Message\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
