--- a/Mvc_Online_Commercial_Automation/Web.config
+++ b/Mvc_Online_Commercial_Automation/Web.config
@@ -15,11 +15,21 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  <customErrors mode="On">
+		  <error statusCode="404" redirect="/Error/Page404"/>
+		  <error statusCode="403" redirect="/Error/Page403"/>
+		  <error statusCode="400" redirect="/Error/Page400"/>
+	  </customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
 	  <authentication mode="Forms">
 		  <forms loginUrl="/Login/Index/"></forms>
 	  </authentication>
+	  <roleManager enabled="true" defaultProvider="DenemeRoleProvider">
+		  <providers>
+			  <add name="DenemeRoleProvider" type="Mvc_Online_Commercial_Automation.Rols.AdminRoleProvider"/>
+		  </providers>
+	  </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
